--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Battlefrounds</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
