--- a/index.html
+++ b/index.html
@@ -2,13 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Battlefrounds</title>
+    <title>Battlegrounds</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="main-head">
+      <div class="mnu-line">
+         <ul>
+             <li>
+                Главная 
+             </li>
+             <li>
+                 Трейлер
+             </li>
+             <li>
+                 Описание
+             </li>
+             <li>
+                 Интересные факты
+             </li>
+         </ul> 
+      </div>    
       <img src="img/logo.png" alt="Battlegrounds">
     </header>
-    <iframe src="https://www.youtube.com/embed/ODWCbu_cuqk" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
