--- a/Trailers.html
+++ b/Trailers.html
@@ -6,15 +6,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="main-head">
+    <header class="main-head-2">
       <div class="mnu-line">
          <ul>
-             <li><a href="#">
+             <li><a href="index.html">
                 Главная
              </a>
              </li>
              
-             <li><a href="Trailers.html">
+             <li><a href="#">
                  Трейлер
              </a>
              </li>
@@ -28,7 +28,7 @@
              </li>
          </ul> 
       </div>    
-      <img src="img/logo.png" alt="Battlegrounds">
+      <iframe width="660" height="415" src="https://www.youtube.com/embed/ODWCbu_cuqk" frameborder="0" allowfullscreen></iframe>
     </header>
 </body>
 </html>
