--- a/about.html
+++ b/about.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="main-head">
+    <header class="main-head-3">
       <div class="mnu-line">
          <ul>
-             <li><a href="#">
+             <li><a href="index.html">
                 Главная
              </a>
              </li>
@@ -18,7 +18,7 @@
                  Трейлер
              </a>
              </li>
-             <li><a href="about.html">
+             <li><a href="#">
                  Описание
                  </a>
              </li>
@@ -28,7 +28,7 @@
              </li>
          </ul> 
       </div>    
-      <img src="img/logo.png" alt="Battlegrounds">
     </header>
+    
 </body>
 </html>
