--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Letton's Web</title>
-  <link rel="stylesheet" href="bootstrap.min.css">
-  <link rel="stylesheet" href="font-awesome.css">
-  <link rel="stylesheet" href="style.css">
+  <title>LETTON'S CODING</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="navbar navbar-inverse navbar-fixed-top">
@@ -17,30 +17,29 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">LETTON</a>
+        <a class="navbar-brand" href="#">LETT<i class="fa fa-circle" aria-hidden="true"></i>N</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Домой</a></li>
+          <li class="active"><a href="#">Домой</a></li>
           <li><a href="#">Про нас</a></li>
-          <li><a href="#">Сервсиы</a></li>
-          <li><a href="#">Работы</a></li>
-          <li><a href="#"><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>
+          <li><a href="#">Сервисы</a></li>
+          <li><a href="#">Заказать</a></li>
         </ul>
       </div>
     </div>
   </div>
-   <div id="headerwrap">
-    <div class="container centered">
-      <div class="row ">
-        <div class="col-lg-8 col-lg-offset-2">
-          <h1>Bootstrap is awesome!</h1>
-          <h2>Сайты на Bootstrap отличные</h2>
-        </div>
+  <div class="headerwrap">
+      <div class="container centered">
+          <div class="row">
+              <div class="col-lg-8">
+                 <h1>Закажите  верстку у нас</h1>
+                 <h2>Мы гарантируем красивый и адаптивный дизайн</h2>
+              </div>
+          </div>
       </div>
-    </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script src="bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
