--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LETTON'S CODING</title>
+  <title>LETTON CODING</title>
+  <link rel="shortcut icon" href="img/logo.png" type="image/png">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -39,6 +40,28 @@
           </div>
       </div>
   </div>
+  <section>
+  <div class="container w">
+    <div class="row centered">
+      <div class="col-md-4">
+        <i class="fa fa-heart"></i>
+        <h4>Дизайн</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+      <div class="col-md-4">
+        <i class="fa fa-laptop"></i>
+        <h4>Адаптивность</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+      <div class="col-md-4">
+        <i class="fa fa-trophy"></i>
+        <h4>Поддержка</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      </div>
+    </div>
+  </div>
+  </section>
+  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
 </body>
