--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LETTON CODING</title>
-  <link rel="shortcut icon" href="img/logo.png" type="image/png">
+  <link href="https://itproger.com/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -61,13 +61,52 @@
     </div>
   </div>
   </section>
+      <section>
+  <div class="dg">
+      <div class="container">
+          <div class="row centered">
+            <h3>Последние работы</h3> 
+            <div class="col-lg-6">
+               <div class="tilt">
+                   <a href="#"><img src="img/pic1.jpg" alt=""></a>
+               </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="tilt">
+                   <a href="#"><img src="img/pic2.jpg" alt=""></a>
+               </div>
+            </div>
+          </div>
+      </div>
+  </div>
+  </section>
+  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  
+  
+  
+  
   <script src="js/bootstrap.min.js"></script>
-  <!-- HelloPreload http://hello-site.ru/preloader/ -->
-<!-- HelloPreload http://hello-site.ru/preloader/ -->
-<style type="text/css">#hellopreloader>p{display:none;}#hellopreloader_preload{display: block;position: fixed;z-index: 99999;top: 0;left: 0;width: 100%;height: 100%;min-width: 1000px;background: #2d2d2d url(http://hello-site.ru//main/images/preloads/puff.svg) center center no-repeat;background-size:137px;}</style>
+  
+  
+  
+<!-- Preloader-->
+<style type="text/css">#hellopreloader>p{display:none;}#hellopreloader_preload{display: block;position: fixed;z-index: 99999;top: 0;left: 0;width: 100%;height: 100%;min-width: 1000px;background: #2d2d2d url(http://hello-site.ru//main/images/preloads/puff.svg) center center no-repeat;background-size:137px;}
+</style>
+
+
+
 <div id="hellopreloader"><div id="hellopreloader_preload"></div><p><a href="http://hello-site.ru">Hello-Site.ru. Бесплатный конструктор сайтов.</a></p></div>
+
+
+
 <script type="text/javascript">var hellopreloader = document.getElementById("hellopreloader_preload");function fadeOutnojquery(el){el.style.opacity = 1;var interhellopreloader = setInterval(function(){el.style.opacity = el.style.opacity - 0.05;if (el.style.opacity <=0.05){ clearInterval(interhellopreloader);hellopreloader.style.display = "none";}},16);}window.onload = function(){setTimeout(function(){fadeOutnojquery(hellopreloader);},1000);};</script>
-<!-- HelloPreload http://hello-site.ru/preloader/ -->
+
+
+<!-- Preloader -->
+
+
+
+
 </body>
 </html>
