--- a/index.html
+++ b/index.html
@@ -61,24 +61,38 @@
     </div>
   </div>
   </section>
-      <section>
+  <section>
   <div class="dg">
       <div class="container">
           <div class="row centered">
             <h3>Последние работы</h3> 
             <div class="col-lg-6">
                <div class="tilt">
-                   <a href="#"><img src="img/pic1.jpg" alt=""></a>
+                   <a href="#"><img src="img/pic1.jpg" alt="Са1т_1"></a>
                </div>
             </div>
             <div class="col-lg-6">
                 <div class="tilt">
-                   <a href="#"><img src="img/pic2.jpg" alt=""></a>
+                   <a href="#"><img src="img/pic2.jpg" alt="Сайт_2"></a>
                </div>
             </div>
           </div>
       </div>
   </div>
+  </section>
+  <section>
+      <div class="wd">
+          <div class="container">
+              <div class="row centered">
+                  <div class="col-lg-8 col-lg-offset-2">
+                      <h3>Мы создаём сайты</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  </div>
+                  <div class="col-lg-2"></div>
+                  <div class="col-lg-8"></div>
+              </div>
+          </div>
+      </div>
   </section>
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -91,22 +105,14 @@
   
   
 <!-- Preloader-->
-<style type="text/css">#hellopreloader>p{display:none;}#hellopreloader_preload{display: block;position: fixed;z-index: 99999;top: 0;left: 0;width: 100%;height: 100%;min-width: 1000px;background: #2d2d2d url(http://hello-site.ru//main/images/preloads/puff.svg) center center no-repeat;background-size:137px;}
-</style>
 
-
+<style type="text/css">#hellopreloader>p{display:none;}#hellopreloader_preload{display: block;position: fixed;z-index: 99999;top: 0;left: 0;width: 100%;height: 100%;min-width: 1000px;background: #2d2d2d url(http://hello-site.ru//main/images/preloads/puff.svg) center center no-repeat;background-size:135px;}</style>
 
 <div id="hellopreloader"><div id="hellopreloader_preload"></div><p><a href="http://hello-site.ru">Hello-Site.ru. Бесплатный конструктор сайтов.</a></p></div>
 
-
-
 <script type="text/javascript">var hellopreloader = document.getElementById("hellopreloader_preload");function fadeOutnojquery(el){el.style.opacity = 1;var interhellopreloader = setInterval(function(){el.style.opacity = el.style.opacity - 0.05;if (el.style.opacity <=0.05){ clearInterval(interhellopreloader);hellopreloader.style.display = "none";}},16);}window.onload = function(){setTimeout(function(){fadeOutnojquery(hellopreloader);},1000);};</script>
 
-
 <!-- Preloader -->
-
-
-
 
 </body>
 </html>
