--- a/about.html
+++ b/about.html
@@ -25,19 +25,19 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#">Домой</a></li>
-          <li><a href="about.html">Про нас</a></li>
+          <li><a href="#">Домой</a></li>
+          <li class="active"><a href="#">Про нас</a></li>
           <li><a href="#">Заказать</a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="headerwrap">
+  <div class="headerwrapa">
       <div class="container centered">
           <div class="row">
               <div class="col-lg-8">
-                 <h1>Закажите  верстку у нас</h1>
-                 <h2>Мы гарантируем красивый и адаптивный дизайн</h2>
+                 <h1>Наши преимущества:</h1>
+                 <h2>Дизайн, быстрота, поддержка, адаптивность</h2>
               </div>
           </div>
       </div>
@@ -65,55 +65,6 @@
   </div>
 </section>
       
-  <section>
-  <div class="dg">
-      <div class="container">
-          <div class="row centered">
-            <h3>Последние работы</h3> 
-            <div class="col-lg-6">
-               <div class="tilt">
-                   <a href="img/pic1.jpg"><img src="img/pic1.jpg" alt="Сайт_1"></a>
-               </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="tilt">
-                   <a href="img/pic1.jpg"><img src="img/pic2.jpg" alt="Сайт_2"></a>
-               </div>
-            </div>
-          </div>
-      </div>
-  </div>
-  </section>
-  
-  <section>
-      <div class="wd">
-          <div class="container">
-              <div class="row centered">
-                  <div class="col-lg-8 col-lg-offset-2">
-                      <h3>Мы создаём сайты</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                  </div>
-                  <div class="col-lg-2"></div>
-                  <div class="col-lg-10 col-lg-offset-1"><a href="img/munter.png"><img src="img/munter.png" alt="Laptop"></a></div>
-              </div>
-          </div>
-      </div>
-  </section>
-  
-  <section>
-     <div class="wg">
-      <div class="container">
-          <div class="row centered">
-              <div class="col-lg-8 col-lg-offset-2">
-                  <h3>Разработка на профессианальном уровне</h3>
-              </div>
-              <div class="col-sm-4 col-sm-offset-4">
-                  <button class="btn btn-warning btnwh">Заказать</button>
-              </div>
-          </div>
-          </div>
-      </div>
-  </section>
   
   <footer>
       <div class="container">
