--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Домой</a></li>
+          <li><a href="..">Домой</a></li>
           <li class="active"><a href="#">Про нас</a></li>
           <li><a href="#">Заказать</a></li>
         </ul>
@@ -36,7 +36,7 @@
       <div class="container centered">
           <div class="row">
               <div class="col-lg-8">
-                 <h1>Наши преимущества:</h1>
+                 <h1>Преимущества:</h1>
                  <h2>Дизайн, быстрота, поддержка, адаптивность</h2>
               </div>
           </div>
