--- a/order.html
+++ b/order.html
@@ -25,46 +25,32 @@
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#">Домой</a></li>
+          <li><a href="..">Домой</a></li>
           <li><a href="about.html">Про нас</a></li>
-          <li><a href="order.html">Заказать</a></li>
+          <li class="active"><a href="#">Заказать</a></li>
         </ul>
       </div>
     </div>
   </div>
-  <div class="headerwrap">
-      <div class="container centered">
-          <div class="row">
-              <div class="col-lg-8">
-                 <h1>Закажите  верстку у нас</h1>
-                 <h2>Мы гарантируем красивый и адаптивный дизайн</h2>
+  <section>
+      <div class="wd">
+          <div class="container">
+              <div class="row centered">
+                  <div class="col-lg-8 col-lg-offset-2">
+                      <h3>Заказать</h3>
+                  </div>
               </div>
           </div>
       </div>
-  </div>
-  
-  <section>
-  <div class="container w">
-    <div class="row centered">
-      <div class="col-md-4">
-        <i class="fa fa-heart"></i>
-        <h4>Дизайн</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  </section>
+      <div class="bground">
+          <div class="col-lg-4 col-lg-offset-4">
+            <div class="well well-sm">
+                    <b>Email:</b> lettonchannel@gmail.com <br>
+                    <b>Вконтакте:</b> <a href="https://vk.com/blackdesertletton">https://vk.com/blackdesertletton</a>  
+            </div> 
+          </div>
       </div>
-      <div class="col-md-4">
-        <i class="fa fa-laptop"></i>
-        <h4>Адаптивность</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      </div>
-      <div class="col-md-4">
-        <i class="fa fa-trophy"></i>
-        <h4>Поддержка</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      </div>
-    </div>
-  </div>
-</section>
-      
   <section>
   <div class="dg">
       <div class="container">
@@ -84,37 +70,6 @@
       </div>
   </div>
   </section>
-  
-  <section>
-      <div class="wd">
-          <div class="container">
-              <div class="row centered">
-                  <div class="col-lg-8 col-lg-offset-2">
-                      <h3>Мы создаём сайты</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                  </div>
-                  <div class="col-lg-2"></div>
-                  <div class="col-lg-10 col-lg-offset-1"><a href="img/munter.png"><img src="img/munter.png" alt="Laptop"></a></div>
-              </div>
-          </div>
-      </div>
-  </section>
-  
-  <section>
-     <div class="wg">
-      <div class="container">
-          <div class="row centered">
-              <div class="col-lg-8 col-lg-offset-2">
-                  <h3>Разработка на профессианальном уровне</h3>
-              </div>
-              <div class="col-sm-4 col-sm-offset-4">
-                  <a href="order.html"><button class="btn btn-warning btnwh">Заказать</button></a>
-              </div>
-          </div>
-          </div>
-      </div>
-  </section>
-  
   <footer>
       <div class="container">
          <div class="row centered">
