--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="..">Домой</a></li>
           <li class="active"><a href="#">Про нас</a></li>
-          <li><a href="#">Заказать</a></li>
+          <li><a href="order.html">Заказать</a></li>
         </ul>
       </div>
     </div>
