--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
          <div class="row centered">
              <a href="https://vk.com/blackdesertletton"><i class="fa fa-vk" aria-hidden="true"></i></a>
              <a href="https://plus.google.com/u/0/117615025043538291612"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-             <a href="https://mail.google.com/"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+             <a href="mailto:lettonchannel@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
          </div>
       </div>
   </footer>
