--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
             <h3>Последние работы</h3> 
             <div class="col-lg-6">
                <div class="tilt">
-                   <a href="img/pic1.jpg"><img src="img/pic1.jpg" alt="Сайт_1"></a>
+                   <img src="img/pic1.jpg" alt="Сайт_1">
                </div>
             </div>
             <div class="col-lg-6">
                 <div class="tilt">
-                   <a href="img/pic1.jpg"><img src="img/pic2.jpg" alt="Сайт_2"></a>
+                   <img src="img/pic2.jpg" alt="Сайт_2">
                </div>
             </div>
           </div>
@@ -94,7 +94,7 @@
                       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                   </div>
                   <div class="col-lg-2"></div>
-                  <div class="col-lg-10 col-lg-offset-1"><a href="img/munter.png"><img src="img/munter.png" alt="Laptop"></a></div>
+                  <div class="col-lg-10 col-lg-offset-1"><img src="img/munter.png" alt="Laptop"></div>
               </div>
           </div>
       </div>
@@ -120,7 +120,7 @@
          <div class="row centered">
              <a href="https://vk.com/blackdesertletton"><i class="fa fa-vk" aria-hidden="true"></i></a>
              <a href="https://plus.google.com/u/0/117615025043538291612"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-             <a href="https://mail.google.com/"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+             <a href="mailto:lettonchannel@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
          </div>
       </div>
   </footer>
