--- a/order.html
+++ b/order.html
@@ -46,7 +46,7 @@
       <div class="bground">
           <div class="col-lg-4 col-lg-offset-4">
             <div class="well well-sm">
-                    <b>Email:</b> lettonchannel@gmail.com <br>
+                    <b>Email:</b><a href="mailto:lettonchannel@gmail.com"> lettonchannel@gmail.com </a> <br>
                     <b>Вконтакте:</b> <a href="https://vk.com/blackdesertletton">https://vk.com/blackdesertletton</a>  
             </div> 
           </div>
@@ -75,7 +75,7 @@
          <div class="row centered">
              <a href="https://vk.com/blackdesertletton"><i class="fa fa-vk" aria-hidden="true"></i></a>
              <a href="https://plus.google.com/u/0/117615025043538291612"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-             <a href="https://mail.google.com/"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+             <a href="mailto:lettonchannel@gmail.com"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
          </div>
       </div>
   </footer>
