--- a/order.html
+++ b/order.html
@@ -21,7 +21,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">LETT<i class="fa fa-circle" aria-hidden="true"></i>N</a>
+        <a class="navbar-brand" href="..">LETT<i class="fa fa-circle" aria-hidden="true"></i>N</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
