--- a/order.html
+++ b/order.html
@@ -27,7 +27,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="..">Домой</a></li>
           <li><a href="about.html">Про нас</a></li>
-          <li class="active"><a href="">Заказать</a></li>
+          <li class="active"><a href="#">Заказать</a></li>
         </ul>
       </div>
     </div>
