--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">LETT<i class="fa fa-circle" aria-hidden="true"></i>N</a>
+        <a class="navbar-brand" href="">LETT<i class="fa fa-circle" aria-hidden="true"></i>N</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="#">Домой</a></li>
+          <li class="active"><a href="">Домой</a></li>
           <li><a href="about.html">Про нас</a></li>
           <li><a href="order.html">Заказать</a></li>
         </ul>
