--- a/order.html
+++ b/order.html
@@ -27,7 +27,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="..">Домой</a></li>
           <li><a href="about.html">Про нас</a></li>
-          <li class="active"><a href="#">Заказать</a></li>
+          <li class="active"><a href="">Заказать</a></li>
         </ul>
       </div>
     </div>
@@ -58,12 +58,12 @@
             <h3>Последние работы</h3> 
             <div class="col-lg-6">
                <div class="tilt">
-                   <a href="img/pic1.jpg"><img src="img/pic1.jpg" alt="Сайт_1"></a>
+                   <img src="img/pic1.jpg" alt="Сайт_1">
                </div>
             </div>
             <div class="col-lg-6">
                 <div class="tilt">
-                   <a href="img/pic1.jpg"><img src="img/pic2.jpg" alt="Сайт_2"></a>
+                   <img src="img/pic2.jpg" alt="Сайт_2">
                </div>
             </div>
           </div>
