--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="..">Домой</a></li>
-          <li class="active"><a href="#">Про нас</a></li>
+          <li class="active"><a href="">Про нас</a></li>
           <li><a href="order.html">Заказать</a></li>
         </ul>
       </div>
