--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 
 <body>
- 
   <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
@@ -104,10 +103,10 @@
       <div class="container">
           <div class="row centered">
               <div class="col-lg-8 col-lg-offset-2">
-                  <h3>Разработка на профессианальном уровне</h3>
+                  <h3>Разработка на профессиональном уровне</h3>
               </div>
               <div class="col-sm-4 col-sm-offset-4">
-                  <a href="order.html"><button class="btn btn-warning btnwh">Заказать</button></a>
+                  <a href="order.htmыl"><button class="btn btn-warning btnwh">Заказать</button></a>
               </div>
           </div>
           </div>
@@ -139,12 +138,12 @@
   <script src="js/bootstrap.min.js"></script>
   
   
-  
 <!-- Preloader-->
 
 <style type="text/css">#hellopreloader>p{display:none;}#hellopreloader_preload{display: block;position: fixed;z-index: 99999;top: 0;left: 0;width: 100%;height: 100%;min-width: 1000px;background: #2d2d2d url(http://hello-site.ru//main/images/preloads/puff.svg) center center no-repeat;background-size:135px;}</style>
 
-<div id="hellopreloader"><div id="hellopreloader_preload"></div><p><a href="http://hello-site.ru">Hello-Site.ru. Бесплатный конструктор сайтов.</a></p></div>
+<div id="hellopreloader"><div id="hellopreloader_preload"></div>
+</div>
 
 <script type="text/javascript">var hellopreloader = document.getElementById("hellopreloader_preload");function fadeOutnojquery(el){el.style.opacity = 1;var interhellopreloader = setInterval(function(){el.style.opacity = el.style.opacity - 0.05;if (el.style.opacity <=0.05){ clearInterval(interhellopreloader);hellopreloader.style.display = "none";}},16);}window.onload = function(){setTimeout(function(){fadeOutnojquery(hellopreloader);},1000);};</script>
 
