--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   <h3>Разработка на профессиональном уровне</h3>
               </div>
               <div class="col-sm-4 col-sm-offset-4">
-                  <a href="order.htmыl"><button class="btn btn-warning btnwh">Заказать</button></a>
+                  <a href="order.html"><button class="btn btn-warning btnwh">Заказать</button></a>
               </div>
           </div>
           </div>
