--- a/javascript/index.html
+++ b/javascript/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Сlock</title>
+	<link href="https://itproger.com/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
