--- a/order.html
+++ b/order.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+  <style type="text/css">#hellopreloader>p{display:none;}#hellopreloader_preload{display: block;position: fixed;z-index: 99999;top: 0;left: 0;width: 100%;height: 100%;min-width: 1000px;background: #2d2d2d url(http://hello-site.ru//main/images/preloads/puff.svg) center center no-repeat;background-size:135px;}</style>
+  <div id="hellopreloader"><div id="hellopreloader_preload"></div></div>
   <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
