--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -8,25 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body onselectstart="return false" onmousedown="return false">
-   <h1 id="h"></h1>
-   <div class="container">
-   <div class="item">
-       <div class="block"></div>
-       <div class="block"></div>
-       <div class="block"></div>
-   </div>
-   <div class="item">
-       <div class="block"></div>
-       <div class="block"></div>
-       <div class="block"></div>
-   </div>
-   <div class="item">
-       <div class="block"></div>
-       <div class="block"></div>
-       <div class="block"></div>
-   </div>
-   </div>
-   <div id="replay">REPLAY</div>
+   <div>
+       <h1 id="h"></h1>
+       <div class="container">
+       <div class="item">
+           <div class="block"></div>
+           <div class="block"></div>
+           <div class="block"></div>
+       </div>
+       <div class="item">
+           <div class="block"></div>
+           <div class="block"></div>
+           <div class="block"></div>
+       </div>
+       <div class="item">
+           <div class="block"></div>
+           <div class="block"></div>
+           <div class="block"></div>
+       </div>
+       </div>
+       <div id="replay">REPLAY</div>
+    </div>
    <script src="main.js"></script>
 </body>
 </html>
